MonetDB/src/modules/plain/Tests/mmath.stable.out.AIX
stdout of test 'mmath` in directory 'src/modules/plain` itself:


# 05:18:23 >  
# 05:18:23 >  Mtimeout -timeout 60 Mserver "--config=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/conf/MonetDB.conf" --debug=10 --set "monet_mod_path=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/modules/plain/.libs:/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/modules/contrib/.libs:/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/modules/calibrator/.libs:/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/src/mapi/.libs" --set "gdk_dbfarm=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/dbfarm" --set "sql_logdir=/scratchio/nielsnes.GNU_64-d.9327/MonetDB/AIX5.1/log" --set mapi_port=49416 --set sql_port=57449 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < mmath.milM
# 05:18:23 >  

# Monet Database Server V4.5.0
# Copyright (c) 1993-2004, CWI. All rights reserved.
# Compiled for powerpc-ibm-aix5.1.0.0/64bit; dynamically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module("mmath");

setoid(oid(20000000));

# NOTE: If there would be a system with large enough doubles than
#       the expression could actually produce a correct output...
#       (unlikely with IEEE(like) floating point types though)
pow(2.0LL,5000.0LL).print();
[ INF ]
isinf(pow(2.0LL,5000.0LL)).print();
[ 1 ]
pow(-2.0LL,5001.0LL).print();
[ -INF ]
isinf(pow(-2.0LL,5001.0LL)).print();
[ -1 ]
	
finite(1.0LL).print();
[ true ]
finite(log(-1.0LL)).print();
!ERROR: Negative argument is not allowed
!ERROR: math_unary_LOG: operation failed.
!ERROR: interpret_params: finite(param 1): evaluation error.
!ERROR: interpret_params: print(param 1): evaluation error.
finite(pow(2.0LL,5000.0LL)).print();
[ false ]
finite(pow(-2.0LL,5001.0LL)).print();
[ false ]

quit();

# 05:18:24 >  
# 05:18:24 >  Done.
# 05:18:24 >  
